# AntiWaste-CAD

./: Cargo.toml  README.md  build.rs  index.html
src/: analyze.rs  cad.rs  encoding.rs  i18n.rs  main.rs  style.rs
